[package]
name = "twt"
version = "0.6.1"
edition = "2021"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
license = "MIT/Apache-2.0"
description = "Tools for extracting metadata from tweets"
repository = "https://github.com/msfjarvis/twt"
homepage = "https://github.com/msfjarvis/twt"
keywords = ["twitter", "images"]
readme = "README.md"
publish = false
include = ["src/main.rs", "LICENSE-*", "README.md"]

[dependencies]
clap = { version = "4.0.17", features = [ "color", "deprecated", "derive", "env" ] }
color-eyre = { version = "0.6.2", default-features = false }
egg-mode = { version = "0.16.0", features = ["rustls_webpki"], default-features = false }
mime = "0.3"
mime_guess = "2.0.4"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
url = "2.3.1"
