[package]
name = "twt"
version = "1.0.1"
edition = "2021"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
license = "MIT/Apache-2.0"
description = "Tools for extracting metadata from tweets"
repository = "https://github.com/msfjarvis/twt"
homepage = "https://github.com/msfjarvis/twt"
keywords = ["twitter", "images"]
readme = "README.md"
publish = false
include = ["src/main.rs", "LICENSE-*", "README.md"]

[dependencies]
clap = { version = "4.1.1", features = [ "color", "deprecated", "derive", "env" ] }
color-eyre = { version = "0.6.2", default-features = false }
dirs = "4.0.0"
egg-mode = { version = "0.16.0", features = ["rustls_webpki"], default-features = false }
mime = "0.3"
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["serde_derive"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
toml = "0.5.10"
url = "2.3.1"
